# foundation-mm-agent-framework

./: .gitignore  .gitignore.swp  BLACKBOX.md  README.md  program.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md  program-checkpoint.md  pyproject-checkpoint.toml
outputs/: research_log.md  results.jsonl
outputs/.ipynb_checkpoints/: research_log-checkpoint.md  results-checkpoint.jsonl
src/: plot_progress.py  prepare.py  train.py
src/.ipynb_checkpoints/: prepare-checkpoint.py  train-checkpoint.py
