[project]
name = "blackbox-mm-prototype"
version = "0.1.0"
description = "Autonomous ML experiment framework for cardiac MRI classification (ACDC)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "nibabel>=5.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
